[package]
name = "lightning-wire-msgs"
version = "0.1.2"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"
description = "bitcoin lightning wire message types"
license = "Apache-2.0"
keywords = ["bitcoin", "lightning", "message", "serialization", "deserialization"]
readme = "README.md"
documentation = "https://docs.rs/lightning-wire-msgs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning-wire-msgs-derive = "0.1.0"
num_enum = "0.4.1"