[package]
authors = ["Aiden McClelland <me@drbonez.dev>"]
description = "bitcoin lightning wire message types"
documentation = "https://docs.rs/lightning-wire-msgs/"
edition = "2018"
keywords = ["bitcoin", "lightning", "message", "serialization", "deserialization"]
license = "Apache-2.0"
name = "lightning-wire-msgs"
readme = "README.md"
version = "0.2.1"
